--- a/kubernetes/clusters/main/home-automation/actual/app/helmrelease.yaml
+++ b/kubernetes/clusters/main/home-automation/actual/app/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.0.2
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -27,7 +27,7 @@ spec:
     keepHistory: false
   values:
     controllers:
-      main:
+      actual:
         type: statefulset
         statefulset:
           volumeClaimTemplates:
@@ -47,7 +47,7 @@ spec:
             fsGroup: 1001
             fsGroupChangePolicy: "OnRootMismatch"
         containers:
-          main:
+          app:
             securityContext:
               fsGroup: 1001
               runAsUser: 1001
@@ -70,12 +70,13 @@ spec:
               repository: dmcavinue/actual-server
               tag: 24.1.0
     service:
-      main:
+      app:
+        controller: actual
         ports:
           http:
             port: &port 5006
     ingress:
-      main:
+      app:
         enabled: true
         className: nginx
         annotations:
@@ -87,7 +88,7 @@ spec:
               - path: /
                 pathType: Prefix
                 service:
-                  name: main
+                  identifier: app
                   port: *port
         tls:
           - hosts:
