--- a/kubernetes/clusters/main/home-automation/esphome/app/helmrelease.yaml
+++ b/kubernetes/clusters/main/home-automation/esphome/app/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.0.2
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -37,7 +37,7 @@ spec:
         runAsUser: 1001
         runAsGroup: 1001
     controllers:
-      main:
+      esphome:
         type: statefulset
         statefulset:
           volumeClaimTemplates:
@@ -50,7 +50,7 @@ spec:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
-          main:
+          app:
             securityContext:
               fsGroup: 1001
               runAsUser: 1001
@@ -77,12 +77,13 @@ spec:
               PLATFORMIO_CORE_DIR: /config/.plattformio
               PLATFORMIO_GLOBALLIB_DIR: /config/.plattformioLibs
     service:
-      main:
+      app:
+        controller: esphome
         ports:
           http:
             port: 6052
     ingress:
-      main:
+      app:
         enabled: false
     persistence:
       esphome-cache:
