--- a/kubernetes/clusters/main/home-automation/ser2net/app/helmrelease.yaml
+++ b/kubernetes/clusters/main/home-automation/ser2net/app/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.0.2
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -32,11 +32,11 @@ spec:
       nodeSelector:
         feature.node.kubernetes.io/skyconnect: "true"
     controllers:
-      main:
+      ser2net:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
-          main:
+          app:
             securityContext:
               privileged: true
               fsGroup: 0
@@ -51,17 +51,14 @@ spec:
             image:
               repository: dmcavinue/ser2net
               tag: 0.0.3
-              imagePullPolicy: IfNotPresent
     service:
-      main:
+      app:
+        controller: ser2net
         ports:
           http:
             port: 3333
           zigbee:
             port: 3334
-    ingress:
-      main:
-        enabled: false
     persistence:
       ser2net-config:
         name: ser2net-config
