--- a/kubernetes/clusters/main/home-automation/zwave-js-ui/app/helmrelease.yaml
+++ b/kubernetes/clusters/main/home-automation/zwave-js-ui/app/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.0.2
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -35,7 +35,7 @@ spec:
       #   runAsUser: 0
       #   runAsGroup: 0
     controllers:
-      main:
+      zwavejs:
         type: statefulset
         statefulset:
           volumeClaimTemplates:
@@ -48,7 +48,7 @@ spec:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
-          main:
+          app:
             # securityContext:
             #   privileged: true
             #   fsGroup: 0
@@ -57,7 +57,6 @@ spec:
             image:
               repository: ghcr.io/zwave-js/zwave-js-ui
               tag: 9.9.1
-              imagePullPolicy: IfNotPresent
             env:
               TZ: America/New_York
             probes:
@@ -82,14 +81,15 @@ spec:
               limits:
                 memory: 500Mi
     service:
-      main:
+      app:
+        controller: zwavejs
         ports:
           http:
             port: *port
           websocket:
             port: 3000
     ingress:
-      main:
+      app:
         enabled: true
         className: nginx
         annotations:
@@ -101,7 +101,7 @@ spec:
               - path: /
                 pathType: Prefix
                 service:
-                  name: main
+                  identifier: app
                   port: *port
         tls:
           - hosts:
