--- a/kubernetes/clusters/main/media/immich/app/machine-learning/helmrelease.yaml
+++ b/kubernetes/clusters/main/media/immich/app/machine-learning/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.0.2
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -45,18 +45,17 @@ spec:
             matchLabels:
               app.kubernetes.io/name: *app
     controllers:
-      main:
+      immich-machine-learning:
         annotations:
           configmap.reloader.stakater.com/reload: &configMap immich-configmap
           secret.reloader.stakater.com/reload: &secret immich-secret
         type: deployment
         strategy: Recreate
         containers:
-          main:
+          app:
             image:
               repository: ghcr.io/immich-app/immich-machine-learning
               tag: v1.98.2
-              imagePullPolicy: IfNotPresent
             envFrom:
               - configMapRef:
                   name: *configMap
@@ -69,7 +68,8 @@ spec:
                 cpu: 300m
                 memory: 1500Mi
     service:
-      main:
+      app:
+        controller: immich-machine-learning
         ports:
           http:
             port: 3003
