--- a/kubernetes/clusters/main/media/immich/app/microservices/helmrelease.yaml
+++ b/kubernetes/clusters/main/media/immich/app/microservices/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.0.2
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -43,7 +43,7 @@ spec:
             matchLabels:
               app.kubernetes.io/name: *app
     controllers:
-      main:
+      immich-microservices:
         annotations:
           configmap.reloader.stakater.com/reload: &configMap immich-configmap
           secret.reloader.stakater.com/reload: &secret immich-secret
@@ -51,11 +51,10 @@ spec:
         strategy: Recreate
         replicas: 2
         containers:
-          main:
+          app:
             image:
               repository: ghcr.io/immich-app/immich-server
               tag: v1.98.2
-              imagePullPolicy: IfNotPresent
             args: ["start-microservices.sh"]
             envFrom:
               - configMapRef:
@@ -63,14 +62,11 @@ spec:
               - secretRef:
                   name: *secret
             resources:
-              limits:                
+              limits:
                 memory: 1500Mi
               requests:
                 cpu: 100m
                 memory: 256Mi
-    service:
-      main:
-        enabled: false
     persistence:
       library:
         type: persistentVolumeClaim
