--- a/kubernetes/clusters/main/monitoring/vector/app/agent/helmrelease.yaml
+++ b/kubernetes/clusters/main/monitoring/vector/app/agent/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.0.2
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -26,13 +26,13 @@ spec:
     keepHistory: false
   values:
     controllers:
-      main:
+      vector-agent:
         type: daemonset
         strategy: RollingUpdate
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
-          main:
+          app:
             image:
               repository: docker.io/timberio/vector
               tag: 0.36.1-debian@sha256:67c4cfc8fd70c7a0182fdc3ba815f34cebb0c9702e9a0a2b1fbe4f11dac719fa
@@ -63,9 +63,6 @@ spec:
               requests:
                 cpu: 100m
                 memory: 768Mi
-    service:
-      main:
-        enabled: false
     serviceAccount:
       create: true
       name: vector-agent
