--- a/kubernetes/clusters/k0s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/kube-system/cilium/app/helmrelease.yaml
@@ -30,7 +30,9 @@ spec:
     bandwidthManager:
       enabled: true
       bbr: true
-    policyAuditMode: true
+    cni:
+      exclusive: false
+    #policyAuditMode: true
     resources:
       limits:
         memory: 768Mi
@@ -143,7 +145,7 @@ spec:
       enabled: true
       status: "policy"
     gatewayAPI:
-      enabled: true
+      enabled: false
       secretsNamespace:        
         create: false        
         name: ingress
@@ -222,7 +224,7 @@ spec:
     loadBalancer:
       algorithm: maglev
       serviceTopology: true
-      #mode: dsr
+      mode: dsr
     localRedirectPolicy: true
     operator:
       replicas: 1
@@ -239,7 +241,6 @@ spec:
         requests:
           cpu: 50m
           memory: 256Mi
-    #policyAuditMode: true
     prometheus:
       enabled: true
       serviceMonitor:
@@ -247,6 +248,7 @@ spec:
     dashboards:
       enabled: true
     rollOutCiliumPods: true
+    policyAuditMode: true
     securityContext:
       capabilities:
         ciliumAgent:
