--- a/kubernetes/clusters/main/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/clusters/main/kube-system/cilium/app/helmrelease.yaml
@@ -212,7 +212,7 @@ spec:
     loadBalancer:
       algorithm: maglev
       serviceTopology: true
-      mode: dsr
+      #mode: dsr
     localRedirectPolicy: true
     operator:
       replicas: 1
