--- a/kubernetes/clusters/main/kube-system/cilium/ks.yaml
+++ b/kubernetes/clusters/main/kube-system/cilium/ks.yaml
@@ -2,31 +2,36 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cilium
+  name: &appname cilium
   namespace: flux-system
 spec:
+  targetNamespace: kube-system
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/main/kube-system/cilium/app
-  prune: false
+  prune: true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
   wait: false
   interval: 30m
-  retryInterval: 1m
-  timeout: 5m
 # ---
 # apiVersion: kustomize.toolkit.fluxcd.io/v1
 # kind: Kustomization
 # metadata:
-#   name: cilium-policies
+#   name: cilium-network-policies
 #   namespace: flux-system
 # spec:
-#   path: ./kubernetes/clusters/main/kube-system/cilium/policies
-#   prune: false
+#   targetNamespace: kube-system
+#   commonMetadata:
+#     labels:
+#       app.kubernetes.io/name: cilium
+#       app.kubernetes.io/component: netpols
+#   path: ./kubernetes/clusters/main/kube-system/cilium/network-policies
+#   prune: true
 #   sourceRef:
 #     kind: GitRepository
 #     name: home-kubernetes
 #   wait: false
 #   interval: 30m
-#   retryInterval: 1m
-#   timeout: 5m
