--- a/kubernetes/clusters/main/kube-system/cilium/ks.yaml
+++ b/kubernetes/clusters/main/kube-system/cilium/ks.yaml
@@ -16,22 +16,22 @@ spec:
     name: home-kubernetes
   wait: false
   interval: 30m
-# ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: cilium-network-policies
-#   namespace: flux-system
-# spec:
-#   targetNamespace: kube-system
-#   commonMetadata:
-#     labels:
-#       app.kubernetes.io/name: cilium
-#       app.kubernetes.io/component: netpols
-#   path: ./kubernetes/clusters/main/kube-system/cilium/network-policies
-#   prune: true
-#   sourceRef:
-#     kind: GitRepository
-#     name: home-kubernetes
-#   wait: false
-#   interval: 30m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: cilium-network-policies
+  namespace: flux-system
+spec:
+  targetNamespace: kube-system
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: cilium
+      app.kubernetes.io/component: netpols
+  path: ./kubernetes/clusters/main/kube-system/cilium/network-policies
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: home-kubernetes
+  wait: false
+  interval: 30m
