--- a/kubernetes/clusters/main/home-automation/ciliumnetworkpolicy.yaml
+++ b/kubernetes/clusters/main/home-automation/ciliumnetworkpolicy.yaml
@@ -1,188 +1,12 @@
+---
 apiVersion: cilium.io/v2
 kind: CiliumNetworkPolicy
 metadata:
-  name: default
+  name: default-deny
   namespace: home-automation
 spec:
   endpointSelector: {}
   ingress:
-    - fromEndpoints:
-        - {}
-    - fromEndpoints:
-        - matchLabels:
-            k8s:app.kubernetes.io/name: prometheus
-            k8s:io.kubernetes.pod.namespace: monitoring
-      authentication:
-        mode: required
-      toPorts:
-        - ports:
-            - port: "9187"
-    - fromEndpoints:
-        - matchLabels:
-            k8s:app.kubernetes.io/component: controller
-            k8s:app.kubernetes.io/instance: nginx
-            k8s:app.kubernetes.io/name: ingress-nginx
-            k8s:io.kubernetes.pod.namespace: ingress
-      authentication:
-        mode: required
-      toPorts:
-        - ports:
-            - port: "6052"
-    - fromEndpoints:
-        - matchLabels:
-            k8s:app.kubernetes.io/component: controller
-            k8s:app.kubernetes.io/instance: nginx
-            k8s:app.kubernetes.io/name: ingress-nginx
-            k8s:io.kubernetes.pod.namespace: ingress
-      authentication:
-        mode: required
-      toPorts:
-        - ports:
-            - port: "8123"
-    - fromEndpoints:
-        - matchLabels:
-            k8s:app.kubernetes.io/instance: home-assistant
-            k8s:app.kubernetes.io/name: home-assistant
-            k8s:io.kubernetes.pod.namespace: home-automation
-      authentication:
-        mode: required
-      toPorts:
-        - ports:
-            - port: "5432"
-    - fromEndpoints:
-        - matchLabels:
-            k8s:app.kubernetes.io/instance: home-assistant
-            k8s:app.kubernetes.io/name: home-assistant
-            k8s:io.kubernetes.pod.namespace: home-automation
-      authentication:
-        mode: required
-      toPorts:
-        - ports:
-            - port: "3000"
-    - fromEndpoints:
-        - matchLabels:
-            k8s:app.kubernetes.io/component: controller
-            k8s:app.kubernetes.io/instance: nginx
-            k8s:app.kubernetes.io/name: ingress-nginx
-            k8s:io.kubernetes.pod.namespace: ingress
-      authentication:
-        mode: required
-      toPorts:
-        - ports:
-            - port: "8091"
+    - {}
   egress:
-    # dns
-    - toEndpoints:
-        - matchLabels:
-            io.kubernetes.pod.namespace: kube-system
-            k8s-app: kube-dns
-      authentication:
-        mode: required
-      toPorts:
-        - ports:
-            - port: "53"
-              protocol: UDP
-          rules:
-            dns:
-              - matchPattern: "*"
-    - toEndpoints:
-        - {}
-    # allow to all k8s cluster ipam ranges
-    - toCIDRSet:
-        - cidr: 192.168.8.48/28
-        - cidr: 192.168.8.16/28
-        - cidr: 192.168.8.240/28
-      toPorts:
-        - ports:
-            - port: "443"
-    - toCIDRSet:
-        - cidr: 192.168.5.0/24
-      toPorts:
-        - ports:
-            - port: "8008"
-    - toCIDRSet:
-        - cidr: 224.0.0.251/32
-      toPorts:
-        - ports:
-            - port: "5353"
-              protocol: UDP
-    - toCIDRSet:
-        - cidr: 192.168.1.1/32
-      toPorts:
-        - ports:
-            - port: "7441"
-    - toEntities:
-        - world
-      toPorts:
-        - ports:
-            - port: "161"
-    - toEntities:
-        - world
-      toPorts:
-        - ports:
-            - port: "1900"
-    - toEntities:
-        - world
-      toPorts:
-        - ports:
-            - port: "2323"
-    - toEntities:
-        - world
-      toPorts:
-        - ports:
-            - port: "32052"
-    - toEntities:
-        - world
-      toPorts:
-        - ports:
-            - port: "443"
-    - toEntities:
-        - world
-      toPorts:
-        - ports:
-            - port: "6053"
-    - toEntities:
-        - world
-      toPorts:
-        - ports:
-            - port: "6466"
-    - toEntities:
-        - world
-      toPorts:
-        - ports:
-            - port: "8009"
-    - toEntities:
-        - world
-      toPorts:
-        - ports:
-            - port: "8443"
-    - toEndpoints:
-        - matchLabels:
-            k8s:app.kubernetes.io/instance: emqx
-            k8s:app.kubernetes.io/name: emqx
-            k8s:app: emqx
-            k8s:io.kubernetes.pod.namespace: database
-      authentication:
-        mode: required
-      toPorts:
-        - ports:
-            - port: "1883"
-    - toEndpoints:
-        - matchLabels:
-            k8s:cnpg.io/cluster: home-assistant
-            k8s:io.kubernetes.pod.namespace: home-automation
-      authentication:
-        mode: required
-      toPorts:
-        - ports:
-            - port: "5432"
-    - toEndpoints:
-        - matchLabels:
-            k8s:app.kubernetes.io/instance: esphome
-            k8s:app.kubernetes.io/name: esphome
-            k8s:io.kubernetes.pod.namespace: home-automation
-      authentication:
-        mode: required
-      toPorts:
-        - ports:
-            - port: "6052"
+    - {}
