--- a/kubernetes/clusters/main/ingress/ciliumnetworkpolicy.yaml
+++ b/kubernetes/clusters/main/ingress/ciliumnetworkpolicy.yaml
@@ -1,142 +1,12 @@
+---
 apiVersion: cilium.io/v2
 kind: CiliumNetworkPolicy
 metadata:
-  name: default
+  name: default-deny
   namespace: ingress
 spec:
   endpointSelector: {}
   ingress:
-    - fromEndpoints:
-        - {}
-    - fromEntities:
-        - kube-apiserver
-        - remote-node
-      toPorts:
-        - ports:
-            - port: "443"
-            - port: "8443"
-    - fromEndpoints:
-        - matchLabels:
-            k8s:app.kubernetes.io/instance: external-secrets
-            k8s:app.kubernetes.io/name: external-secrets
-            k8s:io.kubernetes.pod.namespace: kube-system
-      authentication:
-        mode: required
-      toPorts:
-        - ports:
-            - port: "443"
-    - fromEndpoints:
-        - matchLabels:
-            k8s:app.kubernetes.io/component: controller
-            k8s:app.kubernetes.io/instance: nginx
-            k8s:app.kubernetes.io/name: ingress-nginx
-            k8s:io.kubernetes.pod.namespace: ingress
-      authentication:
-        mode: required
-      toPorts:
-        - ports:
-            - port: "443"
-            - port: "8123"
-            - port: "6052"
+    - {}
   egress:
-    # dns
-    - toEndpoints:
-        - matchLabels:
-            io.kubernetes.pod.namespace: kube-system
-            k8s-app: kube-dns
-      toPorts:
-        - ports:
-            - port: "53"
-              protocol: UDP
-          rules:
-            dns:
-              - matchPattern: "*"
-    # allow to all k8s cluster ipam ranges
-    - toCIDRSet:
-        - cidr: 192.168.8.48/28
-        - cidr: 192.168.8.16/28
-        - cidr: 192.168.8.240/28
-      toPorts:
-        - ports:
-            - port: "443"
-    - toEndpoints:
-        - matchLabels:
-            k8s:app.kubernetes.io/instance: home-assistant
-            k8s:app.kubernetes.io/name: home-assistant
-            k8s:io.kubernetes.pod.namespace: home-automation
-      authentication:
-        mode: required
-      toPorts:
-        - ports:
-            - port: "8123"
-    - toEndpoints:
-        - matchLabels:
-            k8s:app.kubernetes.io/instance: zwave-js-ui
-            k8s:app.kubernetes.io/name: zwave-js-ui
-            k8s:io.kubernetes.pod.namespace: home-automation
-      authentication:
-        mode: required
-      toPorts:
-        - ports:
-            - port: "8091"
-    - toEndpoints:
-        - matchLabels:
-            k8s:app.kubernetes.io/instance: esphome
-            k8s:app.kubernetes.io/name: esphome
-            k8s:io.kubernetes.pod.namespace: home-automation
-      authentication:
-        mode: required
-      toPorts:
-        - ports:
-            - port: "6052"
-    - toEndpoints:
-        - matchLabels:
-            k8s:app.kubernetes.io/component: controller
-            k8s:app.kubernetes.io/instance: nginx
-            k8s:app.kubernetes.io/name: ingress-nginx
-            k8s:io.kubernetes.pod.namespace: ingress
-      authentication:
-        mode: required
-      toPorts:
-        - ports:
-            - port: "443"
-    - toEndpoints:
-        - matchLabels:
-            k8s:app.kubernetes.io/name: hubble-ui
-            k8s:io.kubernetes.pod.namespace: kube-system
-            k8s:k8s-app: hubble-ui
-      authentication:
-        mode: required
-      toPorts:
-        - ports:
-            - port: "8081"
-    - toEndpoints:
-        - matchLabels:
-            k8s:app.kubernetes.io/instance: immich-server
-            k8s:app.kubernetes.io/name: immich-server
-            k8s:io.kubernetes.pod.namespace: media
-      authentication:
-        mode: required
-      toPorts:
-        - ports:
-            - port: "3001"
-    - toEndpoints:
-        - matchLabels:
-            k8s:app.kubernetes.io/instance: oauth2-proxy
-            k8s:app.kubernetes.io/name: oauth2-proxy
-            k8s:io.kubernetes.pod.namespace: security
-      authentication:
-        mode: required
-      toPorts:
-        - ports:
-            - port: "4180"
-    - toEntities:
-        - world
-      toPorts:
-        - ports:
-            - port: "3000"
-    - toEntities:
-        - world
-      toPorts:
-        - ports:
-            - port: "443"
+    - {}
