update net pol, app labels

--- a/kubernetes/clusters/main/home-automation/music-assistant/ks.yaml
+++ b/kubernetes/clusters/main/home-automation/music-assistant/ks.yaml
@@ -2,9 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: music-assistant
+  name: &appname music-assistant
   namespace: flux-system
 spec:
+  targetNamespace: home-automation
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/home-automation/music-assistant/app
   prune: false
   sourceRef:
