--- a/kubernetes/clusters/main/home-automation/home-assistant/ks.yaml
+++ b/kubernetes/clusters/main/home-automation/home-assistant/ks.yaml
@@ -2,12 +2,16 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: home-assistant
+  name: &appname home-assistant
   namespace: flux-system
 spec:
   dependsOn:
     - name: home-automation-home-assistant-database
     - name: ser2net
+  targetNamespace: home-automation
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/home-automation/home-assistant/app
   prune: false
   sourceRef:
@@ -26,6 +30,7 @@ metadata:
 spec:
   dependsOn:
     - name: cloudnative-pg
+  targetNamespace: home-automation
   path: ./kubernetes/clusters/${ENVIRONMENT}/home-automation/home-assistant/database
   prune: false
   sourceRef:
