--- a/kubernetes/clusters/main/home-automation/ser2net/ks.yaml
+++ b/kubernetes/clusters/main/home-automation/ser2net/ks.yaml
@@ -2,9 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: ser2net
+  name: &appname ser2net
   namespace: flux-system
 spec:
+  targetNamespace: home-automation
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   dependsOn:
     - name: node-feature-rules
   path: ./kubernetes/clusters/${ENVIRONMENT}/home-automation/ser2net/app
