--- a/kubernetes/clusters/main/home-automation/zwave-js-ui/ks.yaml
+++ b/kubernetes/clusters/main/home-automation/zwave-js-ui/ks.yaml
@@ -2,9 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: zwave-js-ui
+  name: &appname zwave-js-ui
   namespace: flux-system
 spec:
+  targetNamespace: home-automation
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   dependsOn:
     - name: ser2net
   path: ./kubernetes/clusters/${ENVIRONMENT}/home-automation/zwave-js-ui/app
