--- a/kubernetes/clusters/main/kube-system/cilium/network-policies/kustomization.yaml
+++ b/kubernetes/clusters/main/kube-system/cilium/network-policies/kustomization.yaml
@@ -3,6 +3,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ./default-allow-kubedns.yaml
   - ./allow-egress-apiserver.yaml
   - ./allow-egress-internet.yaml
   - ./allow-egress-kubedns.yaml
