--- a/kubernetes/clusters/main/kube-system/cilium/network-policies/allow-egress-lan.yaml
+++ b/kubernetes/clusters/main/kube-system/cilium/network-policies/allow-egress-lan.yaml
@@ -50,11 +50,11 @@ spec:
 apiVersion: cilium.io/v2
 kind: CiliumClusterwideNetworkPolicy
 metadata:
-  name: allow-egress-lan-secure
+  name: allow-egress-lan-mgmt
 spec:
   endpointSelector:
     matchLabels:
-      egress.home.arpa/lan-secure: "allow"
+      egress.home.arpa/lan-mgmt: "allow"
   egress:
     - toCIDRSet:
         - cidr: "192.168.1.0/24"
