--- a/kubernetes/clusters/main/kube-system/cilium/network-policies/allow-ingress-lan.yaml
+++ b/kubernetes/clusters/main/kube-system/cilium/network-policies/allow-ingress-lan.yaml
@@ -50,11 +50,11 @@ spec:
 apiVersion: cilium.io/v2
 kind: CiliumClusterwideNetworkPolicy
 metadata:
-  name: allow-ingress-lan-secure
+  name: allow-ingress-lan-mgmt
 spec:
   endpointSelector:
     matchLabels:
-      ingress.home.arpa/lan-secure: "allow"
+      ingress.home.arpa/lan-mgmt: "allow"
   ingress:
     - fromCIDRSet:
         - cidr: "192.168.1.0/24"
