--- a/kubernetes/clusters/main/kube-system/cilium/network-policies/kustomization.yaml
+++ b/kubernetes/clusters/main/kube-system/cilium/network-policies/kustomization.yaml
@@ -17,3 +17,4 @@ resources:
   - ./allow-ingress-lan.yaml
   - ./allow-ingress-world.yaml
   - ./kube-system-allow-all.yaml
+  - ./monitoring-allow-prometheus-scrape.yaml
