--- a/kubernetes/clusters/main/kube-system/cilium/network-policies/default-allow-prometheus.yaml
+++ b/kubernetes/clusters/main/kube-system/cilium/network-policies/default-allow-prometheus.yaml
@@ -9,5 +9,5 @@ spec:
     - fromEndpoints:
         - matchLabels:
             k8s:io.kubernetes.pod.namespace: monitoring
-            k8s:managed-by: prometheus-operator
-            k8s:name: prometheus
+            managed-by: prometheus-operator
+            name: prometheus
