--- a/kubernetes/clusters/main/monitoring/kube-prometheus-stack/app/networkpolicy.yaml
+++ b/kubernetes/clusters/main/monitoring/kube-prometheus-stack/app/networkpolicy.yaml
@@ -11,5 +11,5 @@ spec:
   ingress:
     - fromEndpoints:
         - matchLabels:
-            prometheus: kube-prometheus-stack
+            prometheus: prom-main
             k8s:io.kubernetes.pod.namespace: monitoring
