--- a/kubernetes/clusters/main/home-automation/home-assistant/database/cluster.yaml
+++ b/kubernetes/clusters/main/home-automation/home-assistant/database/cluster.yaml
@@ -12,6 +12,7 @@ spec:
   inheritedMetadata:
     labels:
       kube-image-keeper.enix.io/image-caching-policy: ignore
+      egress.home.arpa/minio: "allow"
   primaryUpdateStrategy: unsupervised
   bootstrap:
     # initdb:
