--- a/kubernetes/clusters/main/monitoring/kube-prometheus-stack/app/networkpolicy.yaml
+++ b/kubernetes/clusters/main/monitoring/kube-prometheus-stack/app/networkpolicy.yaml
@@ -1,5 +1,22 @@
 ---
 apiVersion: cilium.io/v2
+kind: CiliumNetworkPolicy
+metadata:
+  name: allow-egress-prometheus-to-all
+spec:
+  description: Allow Prometheus scraping
+  endpointSelector:
+    matchLabels:
+      prometheus: prom-main
+  egress:
+    - toEndpoints:
+        - matchLabels:
+            prom.home.arpa/kps: allow
+          matchExpressions:
+            - key: io.kubernetes.pod.namespace
+              operator: Exists
+---
+apiVersion: cilium.io/v2
 kind: CiliumClusterwideNetworkPolicy
 metadata:
   name: allow-ingress-prometheus-to-all
