--- a/kubernetes/clusters/main/home-automation/zwave-js-ui/app/helmrelease.yaml
+++ b/kubernetes/clusters/main/home-automation/zwave-js-ui/app/helmrelease.yaml
@@ -80,6 +80,9 @@ spec:
                 memory: 100Mi
               limits:
                 memory: 500Mi
+        pod:
+          labels:
+            egress.home.arpa/world: allow
     service:
       app:
         controller: zwavejs
