add default policies

--- a/kubernetes/clusters/main/monitoring/kustomization.yaml
+++ b/kubernetes/clusters/main/monitoring/kustomization.yaml
@@ -5,6 +5,7 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
+  - ./ciliumnetworkpolicy.yaml
   - ./externalsecret.yaml
   # Flux-Kustomizations
   - ./kube-prometheus-stack/ks.yaml
