--- a/kubernetes/clusters/main/storage/kustomization.yaml
+++ b/kubernetes/clusters/main/storage/kustomization.yaml
@@ -5,4 +5,5 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
+  - ./ciliumnetworkpolicy.yaml
   - ./service.yaml
