--- a/kubernetes/clusters/main/vault/kustomization.yaml
+++ b/kubernetes/clusters/main/vault/kustomization.yaml
@@ -5,6 +5,7 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
+  - ./ciliumnetworkpolicy.yaml
   - ./service.yaml
   # Flux-Kustomizations
   - ./vault-injector/ks.yaml
