--- a/kubernetes/clusters/main/ingress/nginx/app/networkpolicy.yaml
+++ b/kubernetes/clusters/main/ingress/nginx/app/networkpolicy.yaml
@@ -1,44 +1,16 @@
 ---
-# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
 apiVersion: cilium.io/v2
-kind: CiliumNetworkPolicy
+kind: CiliumClusterwideNetworkPolicy
 metadata:
-  name: ingress-nginx
+  name: allow-ingress-nginx
 spec:
+  description: "Allow pods that require ingress to allow traffic from ingress-nginx, no port restrictions"
   endpointSelector:
     matchLabels:
-      app.kubernetes.io/name: ingress-nginx
-      app.kubernetes.io/component: controller
-  egress:
-    # esphome
-    - toEndpoints:
+      ingress.home.arpa/nginx: allow
+  ingress:
+    - fromEndpoints:
         - matchLabels:
-            app.kubernetes.io/name: esphome
-      toPorts:
-        - ports:
-            - port: "6052"
-              protocol: TCP
-    # home-assistant
-    - toEndpoints:
-        - matchLabels:
-            app.kubernetes.io/name: home-assistant
-      toPorts:
-        - ports:
-            - port: "8123"
-              protocol: TCP
-    # music-assistant
-    - toEndpoints:
-        - matchLabels:
-            app.kubernetes.io/name: music-assistant
-      toPorts:
-        - ports:
-            - port: "8095"
-              protocol: TCP
-    # zwave-js-ui
-    - toEndpoints:
-        - matchLabels:
-            app.kubernetes.io/name: zwave-js-ui
-      toPorts:
-        - ports:
-            - port: "3000"
-              protocol: TCP
+            app.kubernetes.io/name: ingress-nginx
+            app.kubernetes.io/component: controller
+            io.kubernetes.pod.namespace: ingress
