--- a/kubernetes/clusters/main/home-automation/zwave-js-ui/app/helmrelease.yaml
+++ b/kubernetes/clusters/main/home-automation/zwave-js-ui/app/helmrelease.yaml
@@ -83,6 +83,7 @@ spec:
         pod:
           labels:
             egress.home.arpa/world: allow
+            ingress.home.arpa/nginx: allow
     service:
       app:
         controller: zwavejs
