--- a/kubernetes/clusters/main/ingress/nginx/app/networkpolicy.yaml
+++ b/kubernetes/clusters/main/ingress/nginx/app/networkpolicy.yaml
@@ -7,7 +7,7 @@ spec:
   description: "Allow pods that require ingress to allow traffic from ingress-nginx, no port restrictions"
   endpointSelector:
     matchLabels:
-      ingress.home.arpa/nginxfoo: allow
+      ingress.home.arpa/nginx: allow
   ingress:
     - fromEndpoints:
         - matchLabels:
