--- a/kubernetes/clusters/main/ingress/nginx/app/networkpolicy.yaml
+++ b/kubernetes/clusters/main/ingress/nginx/app/networkpolicy.yaml
@@ -24,9 +24,9 @@ spec:
     matchLabels:
       app.kubernetes.io/name: ingress-nginx
       app.kubernetes.io/component: controller
-  egress:
+  ingress:
     # oauth2-proxy
-    - toEndpoints:
+    - fromEndpoints:
         - matchLabels:
             app.kubernetes.io/name: oauth2-proxy
             app.kubernetes.io/component: authentication-proxy
@@ -35,6 +35,7 @@ spec:
         - ports:
             - port: "4180"
               protocol: TCP
+  egress:
     # esphome
     - toEndpoints:
         - matchLabels:
